--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,34 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ path('index') }}">Project sf3.4</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'login'}) }}"><a href="{{ path('login') }}">Login</a></li>
+                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'register'}) }}"><a href="{{ path('register') }}">Register</a></li>
+                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'admin'}) }}"><a href="{{ path('admin') }}">Admin</a></li>
+                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'logout'}) }}"><a href="{{ path('logout') }}">Logout</a></li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </nav>
+
+        <div class="container" style="margin-top: 90px;">
+            {{ include('components/_messages.html.twig') }}
+            {% block body %}{% endblock %}
+        </div><!-- /.container -->
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script src="{{ asset('build/js/app.js') }}"></script>
