--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,6 +21,9 @@
                 <input type="password" id="password" name="_password" class="form-control" />
             </div>
 
+            <input type="checkbox" id="remember_me" name="_remember_me" />
+            <label for="remember_me">Maintenir la connexion</label>
+
             <div class="form-group">
                 <button type="submit" class="btn btn-success btn-block btn">Connexion</button>
             </div>
