--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
                         <li class="{{ include('components/_active_menu.html.twig', {'route': 'login'}) }}"><a href="{{ path('login') }}">Login</a></li>
                         <li class="{{ include('components/_active_menu.html.twig', {'route': 'register'}) }}"><a href="{{ path('register') }}">Register</a></li>
                         <li class="{{ include('components/_active_menu.html.twig', {'route': 'admin'}) }}"><a href="{{ path('admin') }}">Admin</a></li>
+                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'profile'}) }}"><a href="{{ path('profile') }}">Profil</a></li>
                         <li class="{{ include('components/_active_menu.html.twig', {'route': 'logout'}) }}"><a href="{{ path('logout') }}">Logout</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
