--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -2,15 +2,19 @@
 
 {% block body %}
 
-        <div class="col-md-4 col-md-offset-4">
-            {{ form_start(form, {'class' : 'form-signin'}) }}
-            {{ form_errors(form) }}
-                {{ form_widget(form) }}
-                {{ form_row(form.add) }}
-              {{ form_rest(form) }}
-            {{ form_end(form) }}
-            <hr>
-            <p class="text-center">Vous avez déjà un compte ? <a href="{{ path('login') }}">Se connecter</a></p>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-4">
+                {{ form_start(form, {'class' : 'form-signin'}) }}
+                {{ form_errors(form) }}
+                    {{ form_widget(form) }}
+                    {{ form_row(form.add) }}
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
+                <hr>
+                <p class="text-center">Vous avez déjà un compte ? <a href="{{ path('login') }}">Se connecter</a></p>
+            </div>
         </div>
+    </div>
 
 {% endblock %}
