--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -1,3 +1,3 @@
 @import "bootstrap";
-@import "starter-template";
+@import "dashboard";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all";
