--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,43 +5,40 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
+        <link rel="stylesheet" href="{{ asset('build/app/css/app.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+            <a class="navbar-brand" href="{{ path('index') }}">Symfony 4</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{{ path('index') }}">Project sf3.4</a>
-                </div>
-                <div id="navbar" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'login'}) }}"><a href="{{ path('login') }}">Login</a></li>
-                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'register'}) }}"><a href="{{ path('register') }}">Register</a></li>
-                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'admin'}) }}"><a href="{{ path('admin') }}">Admin</a></li>
-                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'profile'}) }}"><a href="{{ path('profile') }}">Profil</a></li>
-                        <li class="{{ include('components/_active_menu.html.twig', {'route': 'logout'}) }}"><a href="{{ path('logout') }}">Logout</a></li>
-                    </ul>
-                </div><!--/.nav-collapse -->
+            <div class="collapse navbar-collapse" id="navbars">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item{{ include('components/_active_menu.html.twig', {'route': 'login'}) }}"><a class="nav-link" href="{{ path('login') }}">Login</a></li>
+                    <li class="nav-item{{ include('components/_active_menu.html.twig', {'route': 'register'}) }}"><a class="nav-link" href="{{ path('register') }}">Register</a></li>
+                    <li class="nav-item{{ include('components/_active_menu.html.twig', {'route': 'admin_dashboard'}) }}"><a class="nav-link" href="{{ path('admin_dashboard') }}">Admin</a></li>
+                    {% if app.user %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fas fa-user"></span></a>
+                            <div class="dropdown-menu" aria-labelledby="user">
+                                <a class="dropdown-item{{ include('components/_active_menu.html.twig', {'route': 'profile'}) }}" href="{{ path('profile') }}">Profil</a>
+                                <a class="dropdown-item" href="{{ path('logout') }}">Logout</a>
+                            </div>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
         </nav>
 
-        <div class="container" style="margin-top: 90px;">
+        <main role="main" class="container">
             {{ include('components/_messages.html.twig') }}
             {% block body %}{% endblock %}
-        </div><!-- /.container -->
+        </main><!-- /.container -->
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="{{ asset('build/js/app.js') }}"></script>
+        <script src="{{ asset('build/app/js/app.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
