--- a/templates/profile.html.twig
+++ b/templates/profile.html.twig
@@ -2,13 +2,17 @@
 
 {% block body %}
 
-        <div class="col-md-8 col-md-offset-2">
-            {{ form_start(form, {'class' : 'form-signin'}) }}
-            {{ form_errors(form) }}
-                {{ form_widget(form) }}
-                {{ form_row(form.add) }}
-              {{ form_rest(form) }}
-            {{ form_end(form) }}
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-8">
+                {{ form_start(form, {'class' : 'form-signin'}) }}
+                {{ form_errors(form) }}
+                    {{ form_widget(form) }}
+                    {{ form_row(form.add) }}
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
+            </div>
         </div>
+    </div>
 
 {% endblock %}
