--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,38 +2,42 @@
 
 {% block body %}
 
-    <div class="col-md-4 col-md-offset-4">
-        {% if error %}
-            <div class="alert-message alert alert-danger alert-dismissible" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                {{ error.messageKey|trans(error.messageData, 'security') }}
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-md-4">
+                {% if error %}
+                    <div class="alert-message alert alert-danger alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        {{ error.messageKey|trans(error.messageData, 'security') }}
+                    </div>
+                {% endif %}
+
+                <form action="{{ path('login') }}" method="post">
+                    <div class="form-group">
+                        <label for="username" class="control-label required">Identifiant ou Email</label>
+                        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" />
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password" class="control-label required">Mot de passe</label>
+                        <input type="password" id="password" name="_password" class="form-control" />
+                    </div>
+
+                    <input type="checkbox" id="remember_me" name="_remember_me" />
+                    <label for="remember_me">Maintenir la connexion</label>
+
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success btn-block btn">Connexion</button>
+                    </div>
+
+                    <hr>
+                    <p class="text-center">Pas encore de compte ? <a href="{{ path('register') }}">Inscrivez-vous</a></p>
+
+                </form>
             </div>
-        {% endif %}
-
-        <form action="{{ path('login') }}" method="post">
-            <div class="form-group">
-                <label for="username" class="control-label required">Identifiant ou Email</label>
-                <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control" />
-            </div>
-
-            <div class="form-group">
-                <label for="password" class="control-label required">Mot de passe</label>
-                <input type="password" id="password" name="_password" class="form-control" />
-            </div>
-
-            <input type="checkbox" id="remember_me" name="_remember_me" />
-            <label for="remember_me">Maintenir la connexion</label>
-
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-            <div class="form-group">
-                <button type="submit" class="btn btn-success btn-block btn">Connexion</button>
-            </div>
-
-            <hr>
-            <p class="text-center">Pas encore de compte ? <a href="{{ path('register') }}">Inscrivez-vous</a></p>
-
-        </form>
+        </div>
     </div>
 
 {% endblock %}
