Improvement User entity

--- a/templates/profile.html.twig
+++ b/templates/profile.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin/base.html.twig' %}
 
 {% block body %}
 
@@ -6,10 +6,28 @@
         <div class="row justify-content-md-center">
             <div class="col-md-8">
                 {{ form_start(form, {'class' : 'form-signin'}) }}
-                {{ form_errors(form) }}
-                    {{ form_widget(form) }}
+                    {{ form_errors(form) }}
+                    {{ form_row(form.gender) }}
+                    {{ form_row(form.firstName) }}
+                    {{ form_row(form.lastName) }}
+                    {{ form_row(form.birthday) }}
+                    {{ form_row(form.phoneNumber) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.username) }}
+                    {{ form_row(form.password) }}
+
+                    {% for addressField in form.addresses %}
+                        {{ form_row(addressField.alias) }}
+                        {{ form_row(addressField.address) }}
+                        {{ form_row(addressField.address2) }}
+                        {{ form_row(addressField.zipCode) }}
+                        {{ form_row(addressField.city) }}
+                        {{ form_row(addressField.country) }}
+                    {% endfor %}
+
                     {{ form_row(form.add) }}
-                {{ form_rest(form) }}
+                    {{ form_rest(form) }}
+
                 {{ form_end(form) }}
             </div>
         </div>
