--- a/templates/components/admin/_admin_menu.html.twig
+++ b/templates/components/admin/_admin_menu.html.twig
@@ -2,73 +2,79 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-            <a class="nav-link{{ is_active('admin_dashboard') }}" href="{{ path('admin_dashboard') }}">
-                <span data-feather="home"></span>
-                Dashboard <span class="sr-only">(current)</span>
-            </a>
+                <a class="nav-link{{ is_active('admin_dashboard') }}" href="{{ path('admin_dashboard') }}">
+                    <span data-feather="home"></span>
+                    Dashboard <span class="sr-only">(current)</span>
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="file"></span>
-                Orders
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="file"></span>
+                    Orders
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="shopping-cart"></span>
-                Products
-            </a>
+                <a class="nav-link{{ is_active(['admin_products', 'admin_product_add', 'admin_product_edit']) }}" href="{{ path('admin_products') }}">
+                    <span data-feather="shopping-cart"></span>
+                    Products
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="users"></span>
-                Customers
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="users"></span>
+                    Customers
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="bar-chart-2"></span>
-                Reports
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="bar-chart-2"></span>
+                    Reports
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="layers"></span>
-                Integrations
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="layers"></span>
+                    Integrations
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link{{ is_active('profile') }}" href="{{ path('profile') }}">
+                    <span data-feather="user"></span>
+                    Profile
+                </a>
             </li>
         </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
             <span>Saved reports</span>
             <a class="d-flex align-items-center text-muted" href="#">
-            <span data-feather="plus-circle"></span>
+                <span data-feather="plus-circle"></span>
             </a>
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Current month
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="file-text"></span>
+                    Current month
+                </a>
+            </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">
+                    <span data-feather="file-text"></span>
+                    Last quarter
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Last quarter
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="file-text"></span>
+                    Social engagement
+                </a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Social engagement
-            </a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="#">
-                <span data-feather="file-text"></span>
-                Year-end sale
-            </a>
+                <a class="nav-link" href="#">
+                    <span data-feather="file-text"></span>
+                    Year-end sale
+                </a>
             </li>
         </ul>
     </div>
