--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -26,40 +26,35 @@
     <body>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
             <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Administration</a>
-            {# <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+            <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
             <ul class="navbar-nav px-3">
                 <li class="nav-item text-nowrap">
                     <a class="nav-link" href="{{ path('logout') }}">Sign out</a>
                 </li>
-            </ul> #}
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars" aria-controls="navbars" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbars">
-                <ul class="navbar-nav mr-auto px-3">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="user" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fas fa-user"></span></a>
-                        <div class="dropdown-menu" aria-labelledby="user">
-                            <a class="dropdown-item{{ is_active('profile') }}" href="{{ path('profile') }}">Profil</a>
-                            <a class="dropdown-item" href="{{ path('logout') }}">Logout</a>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+            </ul>
         </nav>
 
         <div class="container-fluid">
             <div class="row">
                 {% include 'components/admin/_admin_menu.html.twig' %}
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                    {{ include('components/_messages.html.twig') }}
+                    <div class="mt-md-3">
+                        {{ include('components/_messages.html.twig') }}
+                    </div>
+
                     {% block body %}{% endblock body %}
                 </main>
             </div>
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
         <script src="{{ asset('build/admin/js/admin.js') }}"></script>
+        <script>
+            $(function () {
+                _Dashboard();
+            });
+        </script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
