--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,7 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success btn-block btn">Connexion</button>
+                        <button type="submit" class="btn btn-success btn-block">Connexion</button>
                     </div>
 
                     <hr>
