--- a/templates/admin/product/product_edit.html.twig
+++ b/templates/admin/product/product_edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}Produit{% endblock %}
+{% block title %}Produits{% endblock %}
 
 {% block body %}
 
@@ -11,7 +11,6 @@
             {{ form_start(form) }}
                 {{ form_errors(form) }}
                 {{ form_widget(form) }}
-                {{ form_row(form.add) }}
                 {{ form_rest(form) }}
             {{ form_end(form) }}
         </div>
