--- a/templates/admin/product/products.html.twig
+++ b/templates/admin/product/products.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/base.html.twig' %}
 
-{% block title %}Produit{% endblock %}
+{% block title %}Produits{% endblock %}
 
 {% block body %}
 
@@ -23,9 +23,9 @@
                     <tr>
                         <td>{{ product.name }}</td>
                         <td>{{ product.reference }}</td>
-                        <td>{{ product.description|truncate(100) }}</td>
-                        <td>{{ product.priceEt|localizedcurrency('EUR') }}</td>
-                        <td>{{ product.priceIt|localizedcurrency('EUR') }}</td>
+                        <td>{{ product.description|slice(0, 100) }}</td>
+                        <td>{{ product.priceEt|format_currency('EUR') }}</td>
+                        <td>{{ product.priceIt|format_currency('EUR') }}</td>
                         <td>
                             <a href="{{ path('admin_product_edit', {'productId': product.id }) }}"><span class="fas fa-edit text-dark"></span></a>
                             <a href="{{ path('admin_product_delete', {'productId': product.id, 'csrf': csrf_token('delete-product')}) }}"><span class="fas fa-trash text-danger"></span></a>
