--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,11 +15,11 @@
 
             <div class="collapse navbar-collapse" id="navbars">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item{{ is_active('login') }}"><a class="nav-link" href="{{ path('login') }}">Login</a></li>
-                    <li class="nav-item{{ is_active('register') }}"><a class="nav-link" href="{{ path('register') }}">Register</a></li>
+                    <li class="nav-item{{ is_active('app_login') }}"><a class="nav-link" href="{{ path('app_login') }}">Login</a></li>
+                    <li class="nav-item{{ is_active('app_register') }}"><a class="nav-link" href="{{ path('app_register') }}">Register</a></li>
                     <li class="nav-item{{ is_active('admin_dashboard') }}"><a class="nav-link" href="{{ path('admin_dashboard') }}">Admin</a></li>
                     {% if app.user %}
-                        <li class="nav-item"><a class="nav-link" href="{{ path('logout') }}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
             </div>
