--- a/templates/user/change_password.html.twig
+++ b/templates/user/change_password.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
+{% block title %}Mot de passe{% endblock %}
+
 {% block body %}
 
     <div class="container">
@@ -8,10 +10,6 @@
                 {{ form_start(form, {'class' : 'form-signin'}) }}
                     {{ form_errors(form) }}
                     {{ form_widget(form) }}
-                    {# {{ form_row(form.oldPassword) }}
-                    {{ form_row(form.newPassword.first) }}
-                    {{ form_row(form.newPassword.second) }}
-                    {{ form_row(form.add) }} #}
                     {{ form_rest(form) }}
                 {{ form_end(form) }}
             </div>
