--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -1,5 +1,7 @@
 {% extends 'admin/base.html.twig' %}
 
+{% block title %}Profil{% endblock %}
+
 {% block body %}
 
     <div class="container">
@@ -8,12 +10,6 @@
                 {{ form_start(form) }}
                     {{ form_errors(form) }}
                     {{ form_widget(form) }}
-                    {# {{ form_row(form.gender) }}
-                    {{ form_row(form.firstName) }}
-                    {{ form_row(form.lastName) }}
-                    {{ form_row(form.birthday) }}
-                    {{ form_row(form.phoneNumber) }}
-                    {{ form_row(form.add) }} #}
                     {{ form_rest(form) }}
                 {{ form_end(form) }}
             </div>
