--- a/templates/user/addresses.html.twig
+++ b/templates/user/addresses.html.twig
@@ -21,6 +21,9 @@
                     {% endfor %} #}
 
                     {{ form_rest(form) }}
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success">Enregistrer</button>
+                    </div>
                 {{ form_end(form) }}
             </div>
         </div>
