--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -36,10 +36,10 @@
 
         <div class="container-fluid">
             <div class="row">
-                {% include 'components/admin/_admin_menu.html.twig' %}
+                {% include 'admin/_admin_menu.html.twig' %}
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                     <div class="mt-md-3">
-                        {{ include('components/_messages.html.twig') }}
+                        {{ include('default/_flash_messages.html.twig') }}
                     </div>
 
                     {% block body %}{% endblock body %}
