--- a/templates/admin/product/add.html.twig
+++ b/templates/admin/product/add.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h2>Modifier le produit</h2>
+    <h2>Ajouter un produit</h2>
     <a class="btn btn-light float-right mb-md-3" href="{{ path('admin_products') }}">Retour</a>
     <div class="row">
         <div class="col-md-12">
@@ -12,6 +12,9 @@
                 {{ form_errors(form) }}
                 {{ form_widget(form) }}
                 {{ form_rest(form) }}
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">Enregistrer</button>
+                </div>
             {{ form_end(form) }}
         </div>
     </div>
