--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
         </nav>
 
         <main role="main" class="container">
-            {{ include('components/_messages.html.twig') }}
+            {{ include('default/_flash_messages.html.twig') }}
             {% block body %}{% endblock %}
         </main><!-- /.container -->
 
