--- a/templates/default/_flash_messages.html.twig
+++ b/templates/default/_flash_messages.html.twig
@@ -1,4 +1,20 @@
-{% if app.session.flashbag.get('success') is defined or
+{% if app.request.hasPreviousSession %}
+    <div class="messages">
+        {% for type, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-dismissible alert-{{ type }} fade in" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+
+                    {{ message|trans }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </div>
+{% endif %}
+
+{# {% if app.session.flashbag.get('success') is defined or
     app.session.flashbag.get('info') is defined or
     app.session.flashbag.get('warning') is defined or
     app.session.flashbag.get('danger') is defined %}
@@ -31,4 +47,4 @@
         </div>
     {% endfor %}
 
-{% endif %}
+{% endif %} #}
