--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -11,6 +11,9 @@
                     {{ form_errors(form) }}
                     {{ form_widget(form) }}
                     {{ form_rest(form) }}
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success">Enregistrer</button>
+                    </div>
                 {{ form_end(form) }}
             </div>
         </div>
